renamed trading to blog

--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-    <title>home.bergertech.com</title> <link rel=stylesheet type="text/css" href="css/andrew.css">
+    <title>home.bergertech.com</title>
+    <link rel=stylesheet type="text/css" href="css/andrew.css">
     <link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-</head> <body>
+</head>
+<body>
 
     <ul class="topnav">
 	<li><A class="active"><i class="fa fa-home"></i></A></li>
