completely chnaged everyithng. started 100% from scratch

--- a/andrew.html
+++ b/andrew.html
@@ -1,21 +1,112 @@
-<!DOCTYPE html>
-<html lang="en-US" style="height: 100%;">
+<html lang="en">
 <head>
-    <title>home.bergertech.com</title>
-    <link rel=stylesheet type="text/css" href="css/andrew.css">
-    <link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel=stylesheet href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel=stylesheet type="text/css" href="css/andrew.css">
+	<title>andrew.bergertech.com</title>
+	<meta name="author" content="Andrew Berger">
 </head>
-<body>
 
-    <ul class="topnav">
-	<li><A class="active"><i class="fa fa-home"></i></A></li>
-	<li><A><i class="fa fa-search"></i></A></li>
-	<li><A><i class="fa fa-facebook-official"></i></A></li>
-	<li><A><i class="fa fa-twitter-square"></i></A></li>
-	<li><A><i class="fa fa-linkedin-square"></i></A></li>
-	<li><A><i class="fa fa-reddit-alien"></i></A></li>
-	<li><A><i class="fa fa-question-circle"></i></A></li>
-    </ul>
+<body>
+<div id="wrap">
+
+	<!-- HEADER -->
+	<div id="header">
+		<h1>andrew@bergertech.com</h1>
+	</div>
+	
+	<!-- TOP NAVIGATION BAR -->
+	<div class="topnav" id="nav">
+		<ul>
+			<li><a href="/" class="active">Home</a></li>
+			<li><a href="/">Search</a></li>
+			<li><a href="/">Blog</a></li>
+			<li><a href="/">Links</a></li>
+			<li><a href="/">Contact</a></li>
+			<li><a href="/">About</a></li>
+		</ul>
+	</div>
+	
+
+	<!-- LEFT SIDEBAR -->
+	<div id="left-sidebar">
+		<h2> About Me </h2>
+		<hr>
+		<p style="text-align:center;"><img id="portrait" src="images/andrew.jpg"></a></p>
+		
+	</div>
+
+	<!-- MAIN -->
+	<div id="main">
+		<h2>Welcome!</h2>
+		<p>This website was made from scratch using HTML and CSS.</p>
+		<p>After graduating from the UW-Madison last May with B.S. degrees in Applied Environmental Economics and Anthropology, I currently work as a Quantitative Risk Analyst with HC Tech (formerly Henning and Carey Technologies) in Chicago, IL.</p>
+		<hr>
+
+                <h2> Projects and Media </h2>
+		<p>Nulla a lacus. Nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Fusce pulvinar lobortis purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec semper ipsum et urna. Ut consequat neque vitae felis. Suspendisse dapibus, magna quis pulvinar laoreet, dolor neque lacinia arcu, et luctus mi erat vestibulum sem. Mauris faucibus iaculis lacus. Aliquam nec ante in quam sollicitudin congue. Quisque congue egestas elit. Quisque viverra. Donec feugiat elementum est. Etiam vel lorem.</p>
+		<p>Aenean tempor. Mauris tortor quam, elementum eu, convallis a, semper quis, purus. Cras at tortor in purus tincidunt tristique. In hac habitasse platea dictumst. Ut eu lectus eu metus molestie iaculis. In ornare. Donec at enim vel erat tempor congue. Nullam varius. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nulla feugiat hendrerit risus. Integer enim velit, gravida id, sollicitudin at, consequat sit amet, leo. Fusce imperdiet condimentum velit. Phasellus nonummy interdum est. Pellentesque quam.</p>
+		<hr>
+
+		<h2> Futures </h2>
+		<p>Nulla dictum. Praesent turpis libero, pretium in, pretium ac, malesuada sed, ligula. Sed a urna eu ipsum luctus faucibus. Curabitur fringilla. Suspendisse sit amet quam. Sed vel pede id libero luctus fermentum. Vestibulum volutpat tempor lectus. Vivamus convallis tempus ante. Nullam adipiscing dui blandit ipsum. Nullam convallis lacus ut quam. Mauris semper elit at ante. Vivamus tristique. Pellentesque pharetra ante at pede. In ultrices arcu vitae purus. In rutrum, erat at mollis consequat, leo massa consequat libero, ac vestibulum libero tellus sed risus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+		<p>Maecenas eu velit nec magna venenatis consequat. In neque. Vivamus pellentesque, lacus eu aliquet semper, lorem metus rhoncus metus, a ornare orci ante a diam. Nunc sem nisl, aliquet quis, elementum nec, imperdiet in, wisi. Proin in lorem. Etiam molestie diam eget ante. Morbi quis tortor id lacus mollis venenatis. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aliquam vel orci sit amet tellus mollis eleifend. Donec urna diam, viverra eget, ultricies gravida, ultrices eu, erat. Proin vel arcu. Sed diam. Cras hendrerit arcu sed augue. Sed justo felis, luctus a, accumsan in, tincidunt facilisis, libero. Phasellus eu eros.</p>
+		<hr>
+		<p> Contact me and share your ideas!</P>
+	</div>
+
+	
+	<!-- RIGHT SIDEBAR -->
+	<div id="right-sidebar">
+		<h3> Categories </h3>
+		<ul>
+			<li><a href="/">Economics & Finance</a></li>
+			<li><a href="/">Computer Science & Programming</a></li>
+			<li><a href="/">Data Science & Statistics</a></li>
+		</ul>
+
+		<hr>
+		<h3> Projects </h3>
+		<ul>
+			<li><a target="_blank" href="http://www.cmegroup.com/education/trading_challenge/2016-trading-challenge.html">CME Trading Challenge 2016</a></li>
+			<li><a target="_blank" href="http://sustaindane.org/going-sustainable/at-work/mpower-business/">Sustain Dane - MPower Business Program</a></li>
+			<li><a target="_blank" href="https://github.com/abberger1/word_matching_game">Learning GRE Vocabulary - Word Matching Game</a></li>
+			<li><a target="_blank" href="https://github.com/abberger1/fx_algo">Python Wrapper for Oanda FX Trading REST API</a></li>
+			<li><a target="_blank" href="/">Socio-Econ Survey of Darbo-Worthington Park (undergraduate thesis)</a></li>
+			<li><a target="_blank" href="/">UW-Longboarders of Madison</a></li>
+		</ul>
+
+		<hr>
+		<h3> Tutorials </h3>
+		<ul>
+			<li><a target="_blank" href="https://www.codeacademy.com">codeacademy</a></li>
+			<li><a target="_blank" href="https://www.sololearn.com">sololearn</a></li>
+			<li><a target="_blank" href="http://www.w3schools.com">w3schools</a></li>
+			<li><a target="_blank" href="http://www.openvim.com/tutorial.html">vim</a></li>
+		</ul>
+
+		<hr>
+		<h3> Social </h3>
+		<ul>
+			<li> <i class="fa fa-facebook-official"></i><a target="_blank" href="https://www.facebook.com">Facebook </a></li>
+			<li> <i class="fa fa-twitter-square"></i><a target="_blank" href="https://www.twitter.com">Twitter </a></li>
+			<li> <i class="fa fa-linkedin-square"></i><a target="_blank" href="https://www.linkedin.com">Linkedin </a></li>
+			<li> <i class="fa fa-reddit-alien"></i><a target="_blank" href="https://www.reddit.com">Reddit </a></li>
+			<li> <i class="fa fa-soundcloud"></i><a target="_blank" href="https://www.soundcloud.com">Soundcloud </a></li>
+			<li> <i class="fa fa-google-plus"></i><a target="_blank" href="https://www.google.com">Google-Plus </a></li>
+			<li> <i class="fa fa-github"></i><a target="_blank" href="https://www.github.com">Github </a></li>
+		</ul>
+	</div>
+
+	<!-- FOOTER -->
+	<div id="footer">
+	    <i class="fa fa-facebook-official" id="icon-med"></i>
+	    <i class="fa fa-twitter-square" id="icon-med"></i>
+	    <i class="fa fa-linkedin-square" id="icon-med"></i>
+	    <i class="fa fa-reddit-alien" id="icon-med"></i>
+	    <i class="fa fa-question-circle" id="icon-med"></i>
+	</div>
+</div>
 
 </body>
 </html>
