https instead of http

--- a/andrew.html
+++ b/andrew.html
@@ -105,7 +105,7 @@
                         rssfeed_font_size="12"; 
                         rssfeed_font_face=""; 
                         rssfeed_border="on"; 
-                        rssfeed_css_url="http://feed.surfing-waves.com/css/style4.css"; 
+                        rssfeed_css_url="https://feed.surfing-waves.com/css/style4.css"; 
                         rssfeed_title="on"; 
                         rssfeed_title_name=""; 
                         rssfeed_title_bgcolor="#3366ff"; 
@@ -132,7 +132,7 @@
                         rssfeed_cache = "2c0498e6b32594afc66bf55892a56dfe"; 
                         //--> 
                 </script> 
-                <script type="text/javascript" src="http://feed.surfing-waves.com/js/rss-feed.js"></script> 
+                <script type="text/javascript" src="https://feed.surfing-waves.com/js/rss-feed.js"></script> 
 	</div>
 	
 	<!-- FOOTER -->
